k8s/tutoriel-dev-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tutoriel-dev-ingress
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  tls:
    - hosts:
        - tutoriel.dev
      secretName: tutoriel-dev-ingress-tls
  rules:
    - host: tutoriel.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tutoriel-dev-service
                port:
                  number: 80
